<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_new_pet" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center">

        <RelativeLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/name"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/name"
                android:hint="@string/tag" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tag" />

            <LinearLayout
                android:id="@+id/layout_attach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/category"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/attach"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@null"
                    android:src="@drawable/ic_picture" />

                <TextView
                    android:id="@+id/text_url"
                    android:textIsSelectable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/select_photo" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/layout_attach"
                android:text="@string/what_is_the_status" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/radio_available"
                    android:text="@string/available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/radio_pending"
                    android:text="@string/pending"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/radio_sold"
                    android:text="@string/sold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </RadioGroup>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_button_register"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>